src/scss/06_components/pages/_cookie-compliance.scss
.cookie-compliance--lead-in__container {
  @include components-container-max-width;
  @include component-side-padding;
  padding-top: 0;

  h1 {
    margin-bottom: $spacing-double;
    margin-top: 0;
  }
}

.cookie-compliance-block {
  .cookie-selection-instruction {
    @include font('body');
    border-bottom: 1px solid $color-black-20;
    display: flex;
    margin-top: $spacing-double;
    padding-bottom: $spacing-double;

    &::before {
      @include pseudo-icon('info-circle', $spacing-double, $color-black, flex);
      margin-right: $spacing-half;
    }

    p {
      margin-top: 0;
    }
  }

  .hds-checkbox {
    display: block;
    margin-top: $spacing-double;

    .hds-checkbox__label {
      @include font('lead');

      // Icon size + spacing.
      display: block;
      padding-left: calc(var(--size) + #{$spacing});
    }

    .hds-checkbox__input,
    .hds-checkbox__label::after,
    .hds-checkbox__label::before {
      top: 7px; // Fix checkbox alignment.
    }
  }

  .form-item:not(:last-of-type) {
    .description {
      border-bottom: 1px solid $color-black-20;
    }
  }

  .description {
    display: block;

    @include breakpoint($breakpoint-l) {
      padding-top: $spacing;
    }
  }

  .buttons {
    input {
      margin-bottom: $spacing-half;
    }
  }
}

.cookie-compliance--lead-in__container,
.cookie-compliance-block {
  p {
    max-width: $content-width-max;
  }
}

.embedded-content-cookie-compliance,
.react-and-share-cookie-compliance,
.helfi-charts-cookie-compliance {
  align-content: center;
  align-items: center;
  background-color: $color-black-5;
  display: flex;
  justify-content: center;

  .map &,
  .remote-video & {
    aspect-ratio: 16 / 9; // Best guess for content size
  }

  .message {
    background-color: $color-white;
    margin: $spacing;
    max-width: $spacing + $content-width-max + $spacing; // paragraphs inside will max-width: content-widh-max
    padding: $spacing;

    @include breakpoint($breakpoint-m) {
      margin: $spacing-quadruple;
      max-width: $spacing-double + $content-width-max + $spacing-double; // paragraphs inside will max-width: content-widh-max
      padding: $spacing-double;
    }

    .hel-icon {
      --icon-size: #{$spacing-and-half};
    }

    h2 {
      margin-top: 0;

      @include font('h4');
    }

    .buttons {
      display: flex;
      flex-direction: column;
      margin-top: $spacing;

      @include breakpoint($breakpoint-m) {
        flex-direction: row;
      }
    }

    .hds-button {
      @include hds-button-colors-on-light-bg;
      margin-top: $spacing;
      max-width: 400px; // To avoid too long buttons.

      @include breakpoint($breakpoint-m) {
        margin-left: $spacing;
        margin-top: 0;
      }

      &:first-child {
        margin-left: 0;
        margin-top: 0;
      }
    }
  }

  .layout-main-wrapper &:last-child .message {
    margin-bottom: 80px;
  }
}

// Remote videos have black background and white text so we need different styles for the
// block when its inside the remote video paragraph.
.remote-video .embedded-content-cookie-compliance {
  background-color: $color-black-90;

  .message {
    background-color: $color-black;

    .hds-button {
      @include hds-button-colors-on-dark-bg;
    }
  }
}

.react-and-share-cookie-compliance {
  .message {
    background-color: transparent;
    padding: 0;
  }
}

